@@ -56,14 +56,14 @@ public final class ITParseAndDiceRollerAdditionDiceRollResults {
         result = rolled.next();
 
         dice = result.getDice();
-        Assertions.assertEquals(new Integer(1), dice.getQuantity());
-        Assertions.assertEquals(new Integer(1), dice.getSides());
+        Assertions.assertEquals(Integer.valueOf(1), dice.getQuantity());
+        Assertions.assertEquals(Integer.valueOf(1), dice.getSides());
 
         result = rolled.next();
 
         dice = result.getDice();
-        Assertions.assertEquals(new Integer(2), dice.getQuantity());
-        Assertions.assertEquals(new Integer(1), dice.getSides());
+        Assertions.assertEquals(Integer.valueOf(2), dice.getQuantity());
+        Assertions.assertEquals(Integer.valueOf(1), dice.getSides());
     }
 
     @Test
@@ -102,14 +102,14 @@ public final class ITParseAndDiceRollerAdditionDiceRollResults {
         rolls = result.getAllRolls().iterator();
 
         Assertions.assertEquals(1, Iterables.size(result.getAllRolls()));
-        Assertions.assertEquals(new Integer(1), rolls.next());
+        Assertions.assertEquals(Integer.valueOf(1), rolls.next());
 
         result = rolled.next();
         rolls = result.getAllRolls().iterator();
 
         Assertions.assertEquals(2, Iterables.size(result.getAllRolls()));
-        Assertions.assertEquals(new Integer(1), rolls.next());
-        Assertions.assertEquals(new Integer(1), rolls.next());
+        Assertions.assertEquals(Integer.valueOf(1), rolls.next());
+        Assertions.assertEquals(Integer.valueOf(1), rolls.next());
     }
 
     @Test
@@ -125,7 +125,7 @@ public final class ITParseAndDiceRollerAdditionDiceRollResults {
 
         history = new DiceRoller().transform(expression);
 
-        Assertions.assertEquals(new Integer(3), history.getTotalRoll());
+        Assertions.assertEquals(Integer.valueOf(3), history.getTotalRoll());
     }
 
     @Test
@@ -145,11 +145,11 @@ public final class ITParseAndDiceRollerAdditionDiceRollResults {
 
         result = rolled.next();
 
-        Assertions.assertEquals(new Integer(1), result.getTotalRoll());
+        Assertions.assertEquals(Integer.valueOf(1), result.getTotalRoll());
 
         result = rolled.next();
 
-        Assertions.assertEquals(new Integer(2), result.getTotalRoll());
+        Assertions.assertEquals(Integer.valueOf(2), result.getTotalRoll());
     }
 
 }
