@@ -50,7 +50,7 @@ public final class TestDiceRollerMultiplicationOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(2), rolled);
+        Assertions.assertEquals(Integer.valueOf(2), rolled);
     }
 
     @Test
@@ -83,7 +83,7 @@ public final class TestDiceRollerMultiplicationOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(1), rolled);
+        Assertions.assertEquals(Integer.valueOf(1), rolled);
     }
 
     @Test
@@ -102,7 +102,7 @@ public final class TestDiceRollerMultiplicationOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-2), rolled);
+        Assertions.assertEquals(Integer.valueOf(-2), rolled);
     }
 
     @Test
@@ -129,7 +129,7 @@ public final class TestDiceRollerMultiplicationOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-3), rolled);
+        Assertions.assertEquals(Integer.valueOf(-3), rolled);
     }
 
     @Test
@@ -148,7 +148,7 @@ public final class TestDiceRollerMultiplicationOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(2), rolled);
+        Assertions.assertEquals(Integer.valueOf(2), rolled);
     }
 
     @Test
@@ -167,7 +167,7 @@ public final class TestDiceRollerMultiplicationOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-2), rolled);
+        Assertions.assertEquals(Integer.valueOf(-2), rolled);
     }
 
     @Test
@@ -194,7 +194,7 @@ public final class TestDiceRollerMultiplicationOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(-1), rolled);
+        Assertions.assertEquals(Integer.valueOf(-1), rolled);
     }
 
     @Test
@@ -213,7 +213,7 @@ public final class TestDiceRollerMultiplicationOperationValue {
 
         rolled = new DiceRoller().transform(operation).getTotalRoll();
 
-        Assertions.assertEquals(new Integer(0), rolled);
+        Assertions.assertEquals(Integer.valueOf(0), rolled);
     }
 
 }
