@@ -69,12 +69,12 @@ public final class TestPostorderTraverser {
 
         exp = exps.next();
         Assertions.assertTrue(exp instanceof IntegerOperand);
-        Assertions.assertEquals(new Integer(1),
+        Assertions.assertEquals(Integer.valueOf(1),
                 ((IntegerOperand) exp).getValue());
 
         exp = exps.next();
         Assertions.assertTrue(exp instanceof IntegerOperand);
-        Assertions.assertEquals(new Integer(2),
+        Assertions.assertEquals(Integer.valueOf(2),
                 ((IntegerOperand) exp).getValue());
 
         exp = exps.next();
@@ -82,7 +82,7 @@ public final class TestPostorderTraverser {
 
         exp = exps.next();
         Assertions.assertTrue(exp instanceof IntegerOperand);
-        Assertions.assertEquals(new Integer(3),
+        Assertions.assertEquals(Integer.valueOf(3),
                 ((IntegerOperand) exp).getValue());
 
         exp = exps.next();
