@@ -74,17 +74,17 @@ public final class TestPreorderTraverser {
 
         exp = exps.next();
         Assertions.assertTrue(exp instanceof IntegerOperand);
-        Assertions.assertEquals(new Integer(1),
+        Assertions.assertEquals(Integer.valueOf(1),
                 ((IntegerOperand) exp).getValue());
 
         exp = exps.next();
         Assertions.assertTrue(exp instanceof IntegerOperand);
-        Assertions.assertEquals(new Integer(2),
+        Assertions.assertEquals(Integer.valueOf(2),
                 ((IntegerOperand) exp).getValue());
 
         exp = exps.next();
         Assertions.assertTrue(exp instanceof IntegerOperand);
-        Assertions.assertEquals(new Integer(3),
+        Assertions.assertEquals(Integer.valueOf(3),
                 ((IntegerOperand) exp).getValue());
     }
 
